RESOLVED FIXED128710
<rdar://problem/15994340> WK2: Cannot scroll to the bottom of the page when the keyboard is on the screen
https://bugs.webkit.org/show_bug.cgi?id=128710
Summary <rdar://problem/15994340> WK2: Cannot scroll to the bottom of the page when t...
Benjamin Poulain
Reported 2014-02-12 17:42:39 PST
<rdar://problem/15994340> WK2: Cannot scroll to the bottom of the page when the keyboard is on the screen
Attachments
Patch (11.04 KB, patch)
2014-02-12 17:44 PST, Benjamin Poulain
enrica: review+
Benjamin Poulain
Comment 1 2014-02-12 17:44:15 PST
Enrica Casucci
Comment 2 2014-02-14 12:40:34 PST
Comment on attachment 224032 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=224032&action=review Looks good to me, > Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:353 > + // FIXME: We will also need to adjust the unobscured rect by taking into account the keyboard rect and the obsucred insets. typo: obscured > Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:360 > + if ([_contentView isAssistingNode]) Maybe you should add a comment explaining that this is the way you figure out that the notification is for this view. > Source/WebKit2/UIProcess/API/ios/WKViewIOS.mm:290 > + // FIXME: We will also need to adjust the unobscured rect by taking into account the keyboard rect and the obsucred insets. Same typo.
Benjamin Poulain
Comment 3 2014-02-14 12:48:10 PST
Note You need to log in before you can comment on or make changes to this bug.