Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm
@@ -50,6 +50,12 @@
 
 #if PLATFORM(IOS)
 #import "WKScrollView.h"
+#import <UIKit/UIPeripheralHost_Private.h>
+
+@interface UIScrollView (UIScrollViewInternal)
+- (void)_adjustForAutomaticKeyboardInfo:(NSDictionary*)info animated:(BOOL)animated lastAdjustment:(CGFloat*)lastAdjustment;
+@end
+
 #endif
 
 #if PLATFORM(MAC) && !PLATFORM(IOS)
@@ -73,6 +79,7 @@
 
     UIEdgeInsets _obscuredInsets;
     bool _isChangingObscuredInsetsInteractively;
+    CGFloat _lastAdjustmentForScroller;
 #endif
 #if PLATFORM(MAC) && !PLATFORM(IOS)
     RetainPtr<WKView> _wkView;
@@ -130,6 +137,12 @@
     [_scrollView addSubview:_contentView.get()];
 
     [self _frameOrBoundsChanged];
+
+    NSNotificationCenter *center = [NSNotificationCenter defaultCenter];
+    [center addObserver:self selector:@selector(_keyboardWillChangeFrame:) name:UIKeyboardWillChangeFrameNotification object:nil];
+    [center addObserver:self selector:@selector(_keyboardDidChangeFrame:) name:UIKeyboardDidChangeFrameNotification object:nil];
+    [center addObserver:self selector:@selector(_keyboardWillShow:) name:UIKeyboardWillShowNotification object:nil];
+    [center addObserver:self selector:@selector(_keyboardWillHide:) name:UIKeyboardWillHideNotification object:nil];
 #endif
 
 #if PLATFORM(MAC) && !PLATFORM(IOS)
@@ -148,6 +161,9 @@
 - (void)dealloc
 {
     [_remoteObjectRegistry _invalidate];
+#if PLATFORM(IOS)
+    [[NSNotificationCenter defaultCenter] removeObserver:self];
+#endif
 
     [super dealloc];
 }
@@ -371,6 +387,42 @@
     CGPoint contentOffset = [_scrollView convertPoint:contentOffsetInDocumentCoordinates fromView:_contentView.get()];
     [_scrollView setContentOffset:contentOffset];
 }
+
+- (void)_keyboardChangedWithInfo:(NSDictionary *)keyboardInfo adjustScrollView:(BOOL)adjustScrollView
+{
+    // FIXME: We will also need to adjust the unobscured rect by taking into account the keyboard rect and the obscured insets.
+    if (adjustScrollView)
+        [_scrollView _adjustForAutomaticKeyboardInfo:keyboardInfo animated:YES lastAdjustment:&_lastAdjustmentForScroller];
+}
+
+- (void)_keyboardWillChangeFrame:(NSNotification *)notification
+{
+    if ([_contentView isAssistingNode])
+        [self _keyboardChangedWithInfo:notification.userInfo adjustScrollView:YES];
+}
+
+- (void)_keyboardDidChangeFrame:(NSNotification *)notification
+{
+    [self _keyboardChangedWithInfo:notification.userInfo adjustScrollView:NO];
+}
+
+- (void)_keyboardWillShow:(NSNotification *)notification
+{
+    if ([_contentView isAssistingNode])
+        [self _keyboardChangedWithInfo:notification.userInfo adjustScrollView:YES];
+}
+
+- (void)_keyboardWillHide:(NSNotification *)notification
+{
+    // Ignore keyboard will hide notifications sent during rotation. They're just there for
+    // backwards compatibility reasons and processing the will hide notification would
+    // temporarily screw up the the unobscured view area.
+    if ([[UIPeripheralHost sharedInstance] rotationState])
+        return;
+
+    [self _keyboardChangedWithInfo:notification.userInfo adjustScrollView:YES];
+}
+
 
 #endif
 
