Source/WebKit2/UIProcess/API/ios/WKInteractionView.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2012, 2013 Apple Inc. All rights reserved.
+ * Copyright (C) 2012-2014 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -49,6 +49,8 @@ struct InteractionInformationAtPosition;
 @class WebIOSEvent;
 
 @interface WKInteractionView : UIView<UIGestureRecognizerDelegate, UIWebTouchEventsGestureRecognizerDelegate, UITextInputPrivate, UIWebFormAccessoryDelegate, UIWKInteractionViewProtocol>
+
+@property (nonatomic, readonly) BOOL isEditable;
 
 - (void)setScrollView:(UIWebScrollView *)scrollView;
 - (void)setPage:(PassRefPtr<WebKit::WebPageProxy>)page;
